<resources>
    <string name="app_name">TindFood</string>
    <string name="homescreenloader">HomeScreenLoader</string>
    <string name="notificiation_channel_id">mychannal</string>
    <string name="notification_channel_title">MyTitle</string>
    <string name="notification_channel_desc">Test Description</string>
    <string name="retour">Retour</string>
    <string name="produit">Produit</string>
    <string name="_1">1</string>
    <string name="pizza">Pizza</string>
    <string name="promotion">Promotion</string>
    <string name="prix">14 €</string>
    <string name="titre_desc_produit">Pizza maison</string>
    <string name="big_desc_produit">Gouter à l\'italie, avec notre pizza fraichement inventée par nos cuisiniers. Une pâte brisée, 500g de jambon, 3 tomates coupés en tranches, quelques olives, avec sa touche de fromage. De quoi vous donnez envie !</string>
    <string name="add_to_cart">Ajouter au panier</string>
    <string name="moins">moins</string>
    <string name="plus">plus</string>
    <string name="logo_app">Logo app</string>
    <string name="panier_valide">Panier valide</string>
    <string name="shoping_place">Votre panier</string>
    <string name="Desc_panier">Cette application est actuellement en construction, la commande n\'est pas encore disponible</string>
    <string name="okay">J\'ai compris</string>
    <string name="selectionelementpage2">SelectionElementPage2</string>
    <string name="selectionelementpage3">SelectionElementPage3</string>
    <string name="nextpage">NextPage</string>
    <string name="selectionelementpage1">SelectionElementPage1</string>
    <string name="ingr_dients">Ingrédients :</string>
    <string name="image_ingr_dient">Image Ingrédient</string>
    <string name="qu_est_qui_nous_ferait_plaisir">Qu\'est qui nous ferait plaisir ?</string>
    <string name="choisis_ton_plat">Choisis ton plat</string>
    <string name="recherche_un_plat_en_particulier">Recherche un plat en particulier</string>
    <string name="cat_gories">Catégories</string>
    <string name="choisis_ta_nourriture">Choisis ta nourriture</string>
    <string name="appuie_moi_dessus">Appuie moi dessus !</string>
    <string name="menu_icone">menu icone</string>
    <string name="icone_users">Icone users</string>
    <string name="img_cat_gory">Img Catégory</string>
    <string name="accueil">Accueil</string>
    <string name="Paramètres">Parametres</string>
    <string name="description">Votre application nutritive</string>
    <string name="profil">Profil</string>
    <string name="informations">Informations</string>

    <string name="navigation_drawer_open">Le menu est ouvert</string>
    <string name="navigation_drawer_close">Le menu est fermé</string>

</resources>