<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools">

    <group android:checkableBehavior="single">

        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/home_icon"
            android:iconTint="@color/main"
            android:title="@string/accueil"
            tools:ignore="UnusedAttribute" />

    </group>

    <item android:title="@string/profil">

        <menu>
            <group android:checkableBehavior="single">
                <item
                    android:id="@+id/nav_settings"
                    android:icon="@drawable/setting_icon"
                    android:iconTint="@color/main"
                    android:title="@string/Paramètres" />
                <item
                    android:id="@+id/nav_information"
                    android:icon="@drawable/information_icon"
                    android:iconTint="@color/main"
                    android:title="@string/informations" />
            </group>
        </menu>


    </item>


</menu>